--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,10 @@
         "yiisoft/yii2-bootstrap4": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "hail812/yii2-adminlte3": "~1.1",
-        "wbraganca/yii2-dynamicform": "*"
-
+        "wbraganca/yii2-dynamicform": "*",
+        "mdmsoft/yii2-admin": "~2.0",
+        "yiisoft/yii2-jui": "^2.0",
+        "yii2mod/yii2-rbac": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
